--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
   },
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
-    "@angular/animations": "^7.0.3",
-    "@angular/cdk": "^7.0.3",
+    "@angular/animations": "^7.2.11",
+    "@angular/cdk": "^7.3.6",
     "@angular/common": "^7.0.3",
     "@angular/compiler": "^7.0.3",
     "@angular/core": "^7.0.3",
     "@angular/forms": "^7.0.3",
     "@angular/http": "^7.0.3",
+    "@angular/material": "^7.3.6",
     "@angular/platform-browser": "^7.0.3",
     "@angular/platform-browser-dynamic": "^7.0.3",
     "@angular/router": "^7.0.3",
@@ -62,6 +63,7 @@
     "core-js": "2.5.1",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
+    "hammerjs": "^2.0.8",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
