--- a/package.json
+++ b/package.json
@@ -63,15 +63,19 @@
     "core-js": "2.5.1",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
+    "google-libphonenumber": "^3.2.2",
     "hammerjs": "^2.0.8",
     "intl": "1.2.5",
+    "intl-tel-input": "^15.0.1",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "^1.2.2",
     "ng2-completer": "2.0.8",
     "ng2-smart-table": "1.3.5",
+    "ngx-bootstrap": "^4.0.0",
     "ngx-echarts": "^4.0.1",
+    "ngx-intl-tel-input": "^2.1.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
