--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,8 @@
               "src/assets/css/animate.css",
               "src/assets/css/magnific-popup.css",
               "src/assets/css/nivo-lightbox.css",
-              "src/assets/css/responsive.css"
+              "src/assets/css/responsive.css",
+              "./styles.scss"
             ],
             "scripts": [
               "node_modules/pace-js/pace.min.js",
