claim result added

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "intl": "1.2.5",
     "intl-tel-input": "^15.0.1",
     "ionicons": "2.0.1",
+    "jalali-moment": "^3.3.3",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "^1.2.2",
